[package]
name = "rustylink"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-tungstenite = "0.23.1"
